# ChangeLog for net-misc/tor
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/tor/ChangeLog,v 1.93 2007/08/29 11:49:42 humpback Exp $

  29 Aug 2007; Gustavo Felisberto <humpback@gentoo.org> files/tor.initd-r3:
  Adding correct init script.

*tor-0.1.2.16-r1 (28 Aug 2007)

  28 Aug 2007; Gustavo Felisberto <humpback@gentoo.org>
  -files/torrc.sample-0.1.0.16.patch, -files/torrc.sample-0.1.1.23.patch,
  -files/tor.confd, -files/tor.initd, -files/tor.initd-r1,
  +files/tor.initd-r3, -tor-0.1.1.23.ebuild, -tor-0.1.1.26.ebuild,
  -tor-0.1.2.14.ebuild, +tor-0.1.2.16-r1.ebuild:
  Removed older versions and dangled files. Fixed bug with init with
  baselayout-2 closes 189724. Thanks to Christian Faulhammer (opfer) for the
  fix.

  09 Aug 2007; Robert Buchholz <rbu@gentoo.org> tor-0.1.2.16.ebuild:
  Stable on amd64 (bug #186644)

  06 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> tor-0.1.2.16.ebuild:
  Stable on sparc wrt security #186644

  04 Aug 2007; Markus Rothe <corsair@gentoo.org> tor-0.1.2.16.ebuild:
  Stable on ppc64; bug #186644

  04 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> tor-0.1.2.16.ebuild:
  ppc stable, bug #186644

  03 Aug 2007; Christian Faulhammer <opfer@gentoo.org> tor-0.1.2.16.ebuild:
  stable x86, security bug 186644

*tor-0.1.2.16 (03 Aug 2007)

  03 Aug 2007; Christian Faulhammer <opfer@gentoo.org> +tor-0.1.2.16.ebuild:
  version bump, for security bug 186644

  02 Jun 2007; René Nussbaumer <killerfox@gentoo.org> tor-0.1.2.14.ebuild:
  Stable on ppc. See bug #180139.

  31 May 2007; Christoph Mende <angelos@gentoo.org> tor-0.1.2.14.ebuild:
  Stable on amd64 wrt security bug 180139

  31 May 2007; Brent Baude <ranger@gentoo.org> tor-0.1.2.14.ebuild:
  Marking tor-0.1.2.14 ppc64 stable for bug#180139

  31 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> tor-0.1.2.14.ebuild:
  Stable on sparc wrt security #180139
