@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX tor.initd-r2 1494 RMD160 56ac023f10e4a170daa8ec29c854968e1320107c SHA1 e76e069ce828c2a21cef0450033056d8e4e604dd SHA256 51fd05cb4c079fcb392459d066a7505de9f57f9f10b7ad5b274edcd1fe9cd1e4
 MD5 560d45ac7d56dda6c184f93c13124329 files/tor.initd-r2 1494
 RMD160 56ac023f10e4a170daa8ec29c854968e1320107c files/tor.initd-r2 1494
@@ -15,6 +18,7 @@ MD5 b9cf2eb98b62197faa6cc2b57c81d547 files/torrc.sample-0.1.2.6.patch 1145
 RMD160 3656774f05abe54ec22a121954a1d437fe1da520 files/torrc.sample-0.1.2.6.patch 1145
 SHA256 5b94e1d8c097626402b0b388fefb15f11b95db112b23d358e04cfe55331911f1 files/torrc.sample-0.1.2.6.patch 1145
 DIST tor-0.1.2.16.tar.gz 1254796 RMD160 813a8726470361ee6629e71a10be67be9cfdd325 SHA1 f8eb950612db49b2f7176c068ca69e0091950bdb SHA256 1083bd4fef643880eb5eaa7deb0bb45a42c9700a1905c6cd2057de97849f067b
+DIST tor-0.1.2.17.tar.gz 1251636 RMD160 7ec316cdcc57ab5e817af1dcda913438b332f7e3 SHA1 01092fb75c407b5c1d7f33db069cf7641973d94d SHA256 fc0fb0c2891ae09854a69512c6b4988964f2eaf62ce80ed6644cb21f87f6056a
 EBUILD tor-0.1.2.16-r1.ebuild 1648 RMD160 46a30d3dc0fc8eb54cea5f6a17d30876fa3b0c8b SHA1 970d0de7bd22abd299dc19df64af4d1f48188636 SHA256 ec8393788f57f99b523036571845fabdbb725ee3ee53ae8596cdd13e2295875d
 MD5 3c6a5fcc8eb49d8d29c08b66d4a53b15 tor-0.1.2.16-r1.ebuild 1648
 RMD160 46a30d3dc0fc8eb54cea5f6a17d30876fa3b0c8b tor-0.1.2.16-r1.ebuild 1648
@@ -23,10 +27,14 @@ EBUILD tor-0.1.2.16.ebuild 1635 RMD160 b6406d674ee2b09c081044014babae2a29e0cb62 
 MD5 4a0739e359fbc817782dbe3a08749460 tor-0.1.2.16.ebuild 1635
 RMD160 b6406d674ee2b09c081044014babae2a29e0cb62 tor-0.1.2.16.ebuild 1635
 SHA256 da0fc4f316beea7c315353bd99d5590457106c95a14003d48523fc3211b3621b tor-0.1.2.16.ebuild 1635
-MISC ChangeLog 15044 RMD160 701ffe7ded217eb43bd287065603261ea55a38bf SHA1 7874e6cfc864963a32ad455695447469250641e2 SHA256 afc544b784073bd7cd9a8d3d703bdbdec9a993f06f6d149d21a284761d09be31
-MD5 e9a1e2e863fc0478df3807a8edadcb22 ChangeLog 15044
-RMD160 701ffe7ded217eb43bd287065603261ea55a38bf ChangeLog 15044
-SHA256 afc544b784073bd7cd9a8d3d703bdbdec9a993f06f6d149d21a284761d09be31 ChangeLog 15044
+EBUILD tor-0.1.2.17.ebuild 1641 RMD160 2084110be1022ef7950568f90270f887402ad536 SHA1 ae4e5d377f46a040569ab3e6dc828a81e5e84f5c SHA256 7561413a5c7c21ca0dab39ec9c15bdea0757ece8301d0aeddc37c60f2e91d8e0
+MD5 65ac3836f12bdb711727fd1af280a339 tor-0.1.2.17.ebuild 1641
+RMD160 2084110be1022ef7950568f90270f887402ad536 tor-0.1.2.17.ebuild 1641
+SHA256 7561413a5c7c21ca0dab39ec9c15bdea0757ece8301d0aeddc37c60f2e91d8e0 tor-0.1.2.17.ebuild 1641
+MISC ChangeLog 15199 RMD160 94f151f2c774fea1d5bbf8d405b226d6f19710a8 SHA1 01ec2bba79d73b9033db2406ee38e9bdaea5e625 SHA256 7f247f2937704037176e737623c19d7806c20fda82e72151780fce1868e4c028
+MD5 473fc59f69ab0a4505956a4635f901ea ChangeLog 15199
+RMD160 94f151f2c774fea1d5bbf8d405b226d6f19710a8 ChangeLog 15199
+SHA256 7f247f2937704037176e737623c19d7806c20fda82e72151780fce1868e4c028 ChangeLog 15199
 MISC metadata.xml 224 RMD160 87e0a44a0ea05af5ad562f03d35b841c42c48971 SHA1 76b617d1cccc3a09fc6995f19e800d99775064c7 SHA256 5a95452656188e381651219d143d53498f11199a52ade7ed467a94e001e72bd6
 MD5 b79b08e0f979feb256c93295714b4fc9 metadata.xml 224
 RMD160 87e0a44a0ea05af5ad562f03d35b841c42c48971 metadata.xml 224
@@ -37,3 +45,13 @@ SHA256 8a70f509f9b916417eaefd78ecacd938cea77c7a40176b377f6eb67a470b6bd0 files/di
 MD5 03b9f4929b4bfa786434fddd2b67f516 files/digest-tor-0.1.2.16-r1 241
 RMD160 cf2de4f9e2f05f0f7c589899d003a5471248521f files/digest-tor-0.1.2.16-r1 241
 SHA256 8a70f509f9b916417eaefd78ecacd938cea77c7a40176b377f6eb67a470b6bd0 files/digest-tor-0.1.2.16-r1 241
+MD5 4a8ab56f90fdc58af64409df7f710d8e files/digest-tor-0.1.2.17 241
+RMD160 e8486d532666624486b2aa7691c5af4a191ddfbc files/digest-tor-0.1.2.17 241
+SHA256 81eb13f4b0a8d6799d16cc9e197296fffc13bb27e024dfeff3cbe6613105d171 files/digest-tor-0.1.2.17 241
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.7 (GNU/Linux)
+
+iD8DBQFG2l1+NQqtfCuFneMRAoWhAJ9GQhoIpvBv+FwseIpetHi2Jq0hzwCdEguQ
+02pgxN15ax/qgUz/IngTGh0=
+=/QwD
+-----END PGP SIGNATURE-----
